--- a/style.css
+++ b/style.css
@@ -205,16 +205,45 @@ main part */
     max-width: 350px;
     width: 100%;
     display: flex;
+    justify-content: space-around;
+}
+
+.trans-input{
+    font-size: 12px;
+}
+
+.amount-input{
+    font-size:15px;
+}
+
+.btn-input{
+    max-width: 54px;
+    width: 100%;
+    height: 30px;
+    border-radius: 30px;
+    border: none;
+}
+
+.btn-input:hover{
+   background-color:orange;
+   cursor: pointer;
 }
 
 .second{
+    cursor: pointer;
+    display: flex;
     max-width:400px;
     width:100%;
     height:150px;
-    background-image: linear-gradient(to top left,rgb(137, 206, 33) , #0ae482);
     margin:10px;
     border-radius:10px;
-    cursor: pointer;
+    border: none;
+    font-size: 20px;
+    transition: all 0.8s;
+    background-image: linear-gradient(to top left, #39b385, #9be15d);
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .second:hover{
@@ -222,14 +251,70 @@ main part */
     transition:all 0.8s ;
 }
 
+.amount-input{
+    font-size:12px;
+}
+
+.trans-input{
+    font-size:12px;
+}
+
+.request-input{
+    margin:0 auto;
+}
+
+.btn-request{
+    max-width: 54px;
+    width: 100%;
+    height: 30px;
+    border-radius: 30px;
+    border: none;
+}
+
+.btn-request:hover{
+   background-color:orange;
+   cursor: pointer;
+}
+
+.req-input {
+    max-width: 400px;
+    width: 100%;
+    display: flex;
+    height: 200px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.request-input{
+    margin-top: 20px;
+}
+
+.inp-div{
+    max-width:100px;
+    width:100%;
+    height:50px;
+}
+
+.btn-req-div{
+    max-width:100px;
+    width:100%;
+    height:50px;
+}
 .third{
+    cursor: pointer;
+    display: flex;
     max-width:400px;
     width:100%;
     height:150px;
-    background-image: linear-gradient(to top left,rgb(248, 8, 8) , #f90369);
     margin:10px;
     border-radius:10px;
-    cursor: pointer;
+    border: none;
+    font-size: 20px;
+    transition: all 0.8s;
+    background-image: linear-gradient(to top left,rgb(248, 8, 8) , #f90369);
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .third:hover{
@@ -237,19 +322,6 @@ main part */
     transition:all 0.8s ;
 }
 
-.summary{
-    height:100px;
-    width: 100%;
-    display:flex;
-    margin:0 auto;
-    justify-content: space-around;
-    border: none;
-    font-size: 20px;
-    text-align: center;
-    width: 900px;
-    border-radius: 40px;
-    
-}
 
 .in{
     font-size:25px;
@@ -280,12 +352,17 @@ main part */
 }
 
 .summary{
-    max-width: 500px;
+    max-width: 600px;
     width: 100%;
     height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin:0 auto;
+    border: none;
+    font-size: 20px;
+    border:1px solid orange;
+    border-radius:30px;
 }
 
 .summary__in{
