--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
     color: #444;
-    background-color: #f3f3f3;
+    background-color: #000000;
     height: 100vh;
     padding: 2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navigation{
@@ -10,13 +11,15 @@ body {
     justify-content: space-around;
     align-items: center;
     padding: 0 2rem;
-    background-image: linear-gradient(to top left, #e3f706, #ff9900);
+    background-image: linear-gradient(to top left, #ff0000, #ff5100);
     border-radius: 20px;
 }
 
 .welcome {
     font-size: 30px;
     font-weight: 500;
+    color:white;
+    font-family: 'Roboto', sans-serif;
 }
 
 .logo {
@@ -25,10 +28,6 @@ body {
     transition: 0.5s;
 }
 
-.logo:hover{
-    height:104px;
-    transition: 0.5s;
-}
 
 .login__input {
     border: none;
@@ -38,6 +37,7 @@ body {
     width: 100px;
     border-radius: 40px;
     margin-right:10px;
+    color:orangered;
 }
 
 
@@ -46,7 +46,8 @@ body {
     font-size: 25px;
     cursor: pointer;
     transition: all 0.8s;
-    background-image: linear-gradient(to top left, #e3f706, #ff9900);
+    background-image: linear-gradient(to top left, #e80808, orangered;);
+    
 }
 
 .login__btn:hover{
@@ -66,7 +67,7 @@ main part */
     gap: 2rem;
     opacity: 0;
     transition: all 0.8s;
-    flex-direction: column
+    flex-direction: column;
 }
 
 .active {
@@ -81,17 +82,17 @@ main part */
 
 .balance__value{
     font-size:45px;
-    color:#ff9900;
+    color:orangered;
 }
 
 .balance__label{
     font-size:25px;
-    color:#ff9900;
+    color:orangered;
 }
 
 .balance__date{
     font-size:20px;
-    color:#ff9900;
+    color:orangered;
 }
 
 
@@ -102,7 +103,7 @@ main part */
     width: 100%;
     height: 500px;
     border-radius: 30px;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);;
     border-radius: 20px;
     overflow: scroll;
 }
@@ -111,7 +112,7 @@ main part */
     padding: 50px 20px;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid orangered;;
     justify-content: space-between;
 }
 
@@ -133,12 +134,12 @@ main part */
 
 .movements__date{
     font-size:20px;
-    color:red;
+    color:orangered;
 }
 
 .movements__value{
     font-size:20px;
-    color:orange;
+    color:orangered;
 }
 
 .right{
@@ -154,6 +155,8 @@ main part */
     display:flex;
     justify-content: space-around;
     flex-wrap: wrap;
+   
+    border-radius: 20px;
 }
 
 .first{
@@ -161,7 +164,7 @@ main part */
     max-width:400px;
     width:100%;
     height:150px;
-    background-color:orange;
+    background-color:orangered;
     margin:10px;
     border-radius:10px;
     border: none;
@@ -269,6 +272,7 @@ main part */
 .request-header{
     font-size:20px;
     margin-top:20px;
+    color:white;
 }
 
 .request-input{
@@ -335,6 +339,10 @@ main part */
     justify-content: flex-start;
 }
 
+.transfer{
+    color:white;
+}
+
 .close-input{
     border: none;
     padding: 0.2rem 0.5rem;
@@ -374,17 +382,17 @@ main part */
 
 .in{
     font-size:25px;
-    color:green;
+    color:orangered;
 }
 
 .out{
     font-size:25px;
-    color:red;
+    color:orangered;
 }
 
 .interest{
     font-size:25px;
-    color:orange;
+    color:orangered;
 }
 
 .btn--sort{
@@ -393,6 +401,7 @@ main part */
     cursor: pointer;
     transition: all 0.5s;
     border-radius: 10px;
+    color:orangered;
 }
 
 .btn--sort:hover{
@@ -410,20 +419,23 @@ main part */
     margin:0 auto;
     border: none;
     font-size: 20px;
-    border:1px solid orange;
+    border:1px solid orangered;;
     border-radius:30px;
 }
 
 .summary__in{
     font-size:25px;
+    color:orangered;
 }
 
 .summary__out{
     font-size:25px;
+    color:orangered;
 }
 
 .summary-interest{
     font-size:25px;
+    color:orangered;
 }
 
 
