--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: #444;
-    background-color: #000000;
+    background-color:#DFFFFD;
     height: 100vh;
     padding: 2rem;
     font-family: 'Roboto', sans-serif;
@@ -91,7 +91,7 @@ main part */
 }
 
 .balance__date{
-    font-size:16px;
+    font-size:15px;
     color:orangered;
 }
 
@@ -103,7 +103,7 @@ main part */
     width: 100%;
     height: 500px;
     border-radius: 30px;
-    background-color: rgb(0, 0, 0);;
+    background-color: #DFFFFD;
     border-radius: 20px;
     overflow: scroll;
 }
@@ -438,4 +438,14 @@ main part */
     color:orangered;
 }
 
-
+.timer{
+    max-width: 600px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    font-size:20px;
+    color:orangered;
+}
